WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141940
[EFL] favicon wasn't updated for google.com sometimes.
https://bugs.webkit.org/show_bug.cgi?id=141940
Summary
[EFL] favicon wasn't updated for google.com sometimes.
KwangHyuk
Reported
2015-02-23 17:36:32 PST
Favicon isn't updated for google.com sometimes. Scenario, 1) visit google.com as first page of minibrowser 2) move to webkit.org 3) re-visit google.com using back button
Attachments
Patch
(1.65 KB, patch)
2015-04-13 10:36 PDT
,
KwangHyuk
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
KwangHyuk
Comment 1
2015-04-13 10:36:23 PDT
Created
attachment 250655
[details]
Patch
Gyuyoung Kim
Comment 2
2015-04-14 02:43:24 PDT
Comment on
attachment 250655
[details]
Patch Nice catch ! r=me.
WebKit Commit Bot
Comment 3
2015-04-14 04:02:11 PDT
Comment on
attachment 250655
[details]
Patch Clearing flags on attachment: 250655 Committed
r182790
: <
http://trac.webkit.org/changeset/182790
>
WebKit Commit Bot
Comment 4
2015-04-14 04:02:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug