[EFL] favicon wasn't updated for google.com sometimes. https://bugs.webkit.org/show_bug.cgi?id=141940

Reviewed by Gyuyoung Kim.

As elm_entry_utf8_to_markup can include additional characters, parameter for the
on_icon_changed_cb was just set by using url string retrieved by ewk_view_url_get().

* MiniBrowser/efl/main.c:
(on_url_changed):


Canonical link: https://commits.webkit.org/161738@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182790 268f45cc-cd09-0410-ab3c-d52691b4dbfc